<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_things_to_do"
                android:icon="@drawable/ic_action_things"
                android:title="@string/things_to_do_string"/>
        <item
                android:id="@+id/nav_job__tracker"
                android:icon="@drawable/ic_action_tracker"
                android:title="@string/job_list_notes_string"/>
        <item
                android:id="@+id/nav_module_notes"
                android:icon="@drawable/ic_action_notes"
                android:title="@string/module_notes_string"/>
        <item
                android:id="@+id/nav_grade_calculator"
                android:icon="@drawable/ic_action_name"
                android:title="@string/grade_calculator_string"/>
    </group>

</menu>
